Resizable layer panel and fix beforeunload events (#461)
* Allow user to change the height of layer panel

* Fix beforeunload events

* Keep tabs at the top

* Fix tutorial

* Fix UI on beam studio

* Exclude Desketop from save changes by beforeunload event

* Fix typo

* Move css to Beambox.tsx

* Fix tutorial positions

* Fix SelLayerBlock overlap with parameter layer

* Remove max height limit

* Use inner var instead of state

--- a/src/web/app/components/beambox/right-panel/AddLayerButton.module.scss
+++ b/src/web/app/components/beambox/right-panel/AddLayerButton.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   cursor: pointer;
   padding: 0;
-  top: 408px;
+  bottom: 4px;
   right: 4px;
   font-size: 24px;
   z-index: 1;
